[project]
name = "atcoder-workspace-cpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atcoder-tools>=2.14.0",
    "bs4>=0.0.2",
    "markupsafe==2.0.1",
    "online-judge-verify-helper>=5.6.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]
