[project]
name = "atcoder-workspace-cpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atcoder-tools>=2.14.0",
    "attrs>=24.3.0",
    "bs4>=0.0.2",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.1",
    "ipykernel>=6.29.5",
    "jinja2>=2.11.3",
    "markupsafe==2.0.1",
    "matplotlib>=3.10.0",
    "online-judge-verify-helper>=5.6.0",
    "pandas>=2.2.3",
    "pygments>=2.19.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rpds-py>=0.22.3",
    "selenium>=4.30.0",
    "setuptools>=75.7.0",
    "urllib3>=2.3.0",
]

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]
